--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,14 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
-      ]
+      ],
+      "@/types/*": ["app/types/*"],
+      "@/components/*": ["app/components/*"],
+      "@/utils/*": ["app/utils/*"],
     },
     "target": "ES2017"
   },
